[package]
name = "cantine_derive"
version = "0.1.0"
authors = ["Caio Romão <contact@caio.co>"]
edition = "2018"
publish = false

[dependencies]
cantine_derive_internal = { path = "./internal" }
serde = { version = "1.0" }
tantivy = "0.13"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
