[package]
name = "tique"
version = "0.3.0"

license = "MIT"
description = "Utilities to drive a tantivy search index"
keywords = ["tantivy", "pagination", "aggregation", "collector", "similarity"]

repository = "https://github.com/caio/cantine/"
homepage = "https://github.com/caio/cantine/tree/master/tique"
authors = ["Caio Romão <contact@caio.co>"]
readme = "README.markdown"
edition = "2018"

[features]
default = []
unstable = ["nom"]

[dependencies]
tantivy = "0.12"
nom = { version = "5", optional = true }
