[package]
name = "tique"
version = "0.6.0"

license = "MIT"
description = "Utilities to drive a tantivy search index"
keywords = ["search", "pagination", "dismax", "collector", "similarity"]

repository = "https://github.com/caio/cantine/"
homepage = "https://github.com/caio/cantine/tree/master/tique"
authors = ["Caio Romão <contact@caio.co>"]
readme = "README.markdown"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
queryparser = ["nom"]

[dependencies]
tantivy = "0.15"
nom = { version = "6", optional = true }

[dev-dependencies]
quickcheck = "1.0"
