[package]
name = "cantine"
version = "0.1.0"
authors = ["Caio Romão <contact@caio.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cantine_derive = { path = "../cantine_derive" }
tique = { path = "../tique" }
actix-rt = "1.0.0-alpha.3"
actix-service = "1.0.0-alpha.4"
actix-web = "2.0.0-alpha.4"
bincode = "1"
byteorder = "1.3"
crossbeam-channel = "0.3"
memmap = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3", default-features = false }
tantivy = "0.10"
uuid = { version = "0.8", features = ["serde"]  }
zerocopy = "0.2"

[dev-dependencies]
# v4 feature added to generate test uuids
uuid = { version = "0.8", features = ["serde", "v4"]  }
tempfile = "3.1"
once_cell = "1.2"
