[package]
name = "cantine"
version = "0.1.0"
authors = ["Caio Romão <contact@caio.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cantine_derive = { path = "../cantine_derive" }
tique = { path = "../tique" }
actix-rt = "1.0"
actix-service = "1.0"
actix-web = "2.0.0-rc"
base64 = "0.11"
bincode = "1"
byteorder = "1.3"
crossbeam-channel = "0.4"
env_logger = { version = "0.7", default-features = false }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
memmap = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3", default-features = false }
tantivy = "0.11"
tokio = { version = "0.2", features = ["time"] }
uuid = { version = "0.8", features = ["serde"]  }
zerocopy = "0.2"

[dev-dependencies]
# v4 feature added to generate test uuids
uuid = { version = "0.8", features = ["serde", "v4"]  }
tempfile = "3.1"
once_cell = "1.2"
