[package]
name = "cantine"
version = "0.1.0"
authors = ["Caio Romão <hello@caio.co>"]
edition = "2018"

[dependencies]
clap = "2"
tantivy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
memmap = "0.7"
byteorder = "1.3"
fs2 = "0.4"
nom = "5"
zerocopy = "0.2"
bincode = "1"

# For flamegraph
[profile.release]
debug = true
