[package]
name = "tique"
version = "0.1.0"
authors = ["Caio Romão <contact@caio.co>"]
edition = "2018"

[dependencies]
tantivy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
memmap = "0.7"
byteorder = "1.3"
nom = "5"
zerocopy = "0.2"
bincode = "1"

# For flamegraph
[profile.release]
debug = true
