[package]
name = "tique"
version = "0.1.0"
authors = ["Caio Romão <contact@caio.co>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
byteorder = "1.3"
nom = "5"

tantivy = { git = "https://github.com/tantivy-search/tantivy" }

[dev-dependencies]
zerocopy = "0.2"
rand = "0.7"
