[package]
name = "tique_derive"
version = "0.1.0"
authors = ["Caio Romão <contact@caio.co>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"

[dev-dependencies]
tique = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
tantivy = "0.11"
